add jschart lib

--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "2gis-maps": "^3.7.1",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "dateformat": "^5.0.3",
+    "jscharting": "^3.3.1",
     "quasar": "^2.0.0",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0"
